Replace deprecated new URL constructors in appserv-tests jms/naming/persistence/security/transaction devtests
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>