@@ -133,7 +133,7 @@ public class WebSSLClient {
                                               SSLSocketFactory ssf)
             throws Exception {
 
-        URL url = new URL(urlAddress);
+        URL url = URI.create(urlAddress).toURL();
         HttpsURLConnection.setDefaultSSLSocketFactory(ssf);
         HttpsURLConnection connection = (HttpsURLConnection)
             url.openConnection();
