@@ -17,6 +17,7 @@
 import com.sun.ejte.ccl.reporter.SimpleReporterAdapter;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
@@ -44,7 +45,7 @@ class TestRoleAssignment {
 
     public void doTest() {
         try {
-            URL u = new URL(url);
+            URL u = URI.create(url).toURL();
             URLConnection uconn = u.openConnection();
 
             up = Base64.getEncoder().encodeToString((username + ":" + password).getBytes(StandardCharsets.UTF_8));
